--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -33,7 +33,7 @@
 
         <div id="confirmationMenu">
             <div>
-                <p>Are you sure?</p>
+                <p>{{confirmationMessage}}</p>
                 <div>
                     <button @click="confirmationResult = true; confirmationDone = true;" class="material-icons">
                         done
@@ -178,15 +178,15 @@
                 <div class="navLeft">
                     <p>Playlist</p><p class="material-icons">view_list</p><p>|</p>
                     <button @click="showListInput()" class="material-icons tooltip"><div class="tooltiptext ttdown">Extend Playlist</div>playlist_add</button>
-                    <div v-show="inputListMode" class="inputList">
+                    <div id="addListUI" v-show="inputListMode" class="inputList">
                         <input @keyup.enter="submitPlaylist" v-model="addPlayList" autocomplete="off" type="text" name="PlaylistIdUnqiue" placeholder="Playlist Id..." />
-                        <button @click="submitPlaylist" class="material-icons">search</button>
+                        <button @click="submitPlaylist" class="material-icons addPlaylistButton">add</button>
                     </div>
                 </div>
                 <div class="navMiddle">
                     <div>
-                        <input v-model="playlistFilter" type="text" autocomplete="off" placeholder="Search" />
-                        <p class="Title" style="margin-left: 10px;">{{filteredPlaylist.length}}{{ (uniqueList.length !== filteredPlaylist.length) ? (' / ' + uniqueList.length) : ''}}</p>
+                        <input id="playlistSearch" v-model="playlistFilter" type="text" autocomplete="off" placeholder="Search" />
+                        <p class="listCount" style="margin-left: 10px;">{{filteredPlaylist.length}}{{ (uniqueList.length !== filteredPlaylist.length) ? (' / ' + uniqueList.length) : ''}}</p>
                     </div>
                 </div>
                 <div class="navRight">
@@ -234,7 +234,7 @@
             <nav>
                 <div class="navLeft">
                     <p>Trashbin</p><p class="material-icons">view_list</p><p>|</p>
-                    <p class="Title" style="margin-left: 10px;">{{oldVideos.length}} Video{{(oldVideos.length != 1) ? 's' : ''}}</p>
+                    <p class="listCount" style="margin-left: 10px;">{{oldVideos.length}} Video{{(oldVideos.length != 1) ? 's' : ''}}</p>
                 </div>
                 <div class="navMiddle">
 
@@ -474,9 +474,9 @@
                 <div class="navLeft">
                     <button @click="showChannels" class="material-icons tooltip" v-bind:class="{activeNavButton : channelMode}"><div style="left: 0" class="tooltiptext ttdown">Channel List</div>{{(filter === 'SubBox') ? 'account_box' : 'star'}} <p>Channels</p></button>
                     <button @click="showListInput()" class="material-icons tooltip" v-bind:class="{activeNavButton : inputListMode}"><div class="tooltiptext ttdown">Add Playlist</div>playlist_add</button>
-                    <div v-show="inputListMode" class="inputList">
+                    <div id="inputListUI" v-show="inputListMode" class="inputList">
                         <input @keyup.enter="submitPlaylist" v-model="addPlayList" autocomplete="off" type="text" name="PlaylistId" placeholder="Playlist Id..." />
-                        <button @click="submitPlaylist" class="material-icons">search</button>
+                        <button @click="submitPlaylist" class="material-icons addPlaylistButton">add</button>
                     </div>
                     <button @click="showOldVideos" class="material-icons tooltip"><div class="tooltiptext ttdown">Trashbin</div>delete</button>
                     <button @click="showTags" class="material-icons tooltip" v-bind:class="{activeNavButton : tagsMode}"><div class="tooltiptext ttdown">Tags</div>label <p>Tags</p></button>
@@ -485,7 +485,7 @@
                 <div class="navMiddle">
                     <div id="topbar" class="topbar">
                         <input id="search" class="search" v-model="searchFilter" type="text" autocomplete="off" placeholder="Search" />
-                        <p class="Title" style="cursor: default;">{{filter}} - {{filteredVideos.length}}{{ (videos.length !== filteredVideos.length) ? (' / ' + videos.length) : ''}}</p>
+                        <p class="Title" style="cursor: default;"><img v-show="filterImg!==''" :src="filterImg" class="channelPic"/>{{filter}} - {{filteredVideos.length}}{{ (videos.length !== filteredVideos.length) ? (' / ' + videos.length) : ''}}</p>
                     </div>
                 </div>
                 <div class="navRight">
