--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -435,7 +435,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="singleSetting" @click.prevent="settings.SmartListLoading = !settings.SmartListLoading; viewPort = (settings.SmartListLoading) ? Math.floor(window.innerHeight / 10) : Number.MAX_SAFE_INTEGER;">
+                <div class="singleSetting" @click.prevent="settings.SmartListLoading = !settings.SmartListLoading; viewPort = (settings.SmartListLoading) ? Math.floor(window.innerHeight / 10) : Number.MAX_SAFE_INTEGER; adjustVideoListHeight();">
                     <div style="justify-content: flex-start;">
                         <p>Smart List Loading</p>
                     </div>
@@ -685,84 +685,77 @@
                     <button @click="refresh" class="material-icons refreshButton">autorenew</button>
                 </div>
             </nav>
+
             <div id="mainList" class="scrollList">
-                <table v-show="filter==='SubBox' && searchFilter === '' && selectedTag == null" class="listList">
-                    <tr v-for="video in lists">
-                        <td>
-                            <div class="videoBox">
-                                <div class="videoContentDiv">
-                                    <div @click="openVideo(video.id)" @click.middle="openVideo(video.id)" class="videoThumb">
-                                        <img :src="video.thumbnailUrl" style="width:246px;height:138px" />
-                                        <p>{{video.duration}}</p>
-                                    </div>
-                                    <div class="videoTextContentDiv">
-                                        <div class="videoTitleDiv">
-                                            <div style="width: 100%" class="videoTitleAndMetaDiv">
-                                                <div @click="openVideo(video.id)" @click.middle="openVideo(video.id)" class="videoTitle">
-                                                    {{video.title}}
-                                                </div>
-                                                <div class="videoText">
-                                                    <span class="videoTextChannel" @click="openChannel(video.channelName)">{{video.channelTitle}}</span> &#9679 {{video.publishedAtString}}
-                                                </div>
-                                            </div>
+                <div v-show="filter==='SubBox' && searchFilter === '' && selectedTag == null" class="listList">
+                    <div class="videoBox" v-for="video in lists">
+                        <div class="videoContentDiv">
+                            <div @click="openVideo(video.id)" @click.middle="openVideo(video.id)" class="videoThumb">
+                                <img :src="video.thumbnailUrl" style="width:246px;height:138px" />
+                                <p>{{video.duration}}</p>
+                            </div>
+                            <div class="videoTextContentDiv">
+                                <div class="videoTitleDiv">
+                                    <div style="width: 100%" class="videoTitleAndMetaDiv">
+                                        <div @click="openVideo(video.id)" @click.middle="openVideo(video.id)" class="videoTitle">
+                                            {{video.title}}
                                         </div>
-
-                                        <div class="videoDesc">
-                                            <p>{{video.description}}</p>
-                                        </div>
-
-                                        <div class="playlistButtonDiv">
-                                            <p class="playlistHint">PLAYLIST</p>
-                                            <button @click="prev(video.list)" style="margin-left: auto" class="material-icons listButton tooltip"><div class="tooltiptext ttleft">Previous Video</div>fast_rewind</button>
-                                            <button @click="next(video.list)" class="material-icons listButton tooltip"><div class="tooltiptext ttright">Next Video</div>fast_forward</button>
-                                            <button @click="showUniqueList(video.list)" class="material-icons listButton tooltip"><div class="tooltiptext ttright">Show Playlist</div>view_list</button>
+                                        <div class="videoText">
+                                            <span class="videoTextChannel" @click="openChannel(video.channelName)">{{video.channelTitle}}</span> &#9679 {{video.publishedAtString}}
                                         </div>
                                     </div>
+                                </div>
+
+                                <div class="videoDesc">
+                                    <p>{{video.description}}</p>
+                                </div>
+
+                                <div class="playlistButtonDiv">
+                                    <p class="playlistHint">PLAYLIST</p>
+                                    <button @click="prev(video.list)" style="margin-left: auto" class="material-icons listButton tooltip"><div class="tooltiptext ttleft">Previous Video</div>fast_rewind</button>
+                                    <button @click="next(video.list)" class="material-icons listButton tooltip"><div class="tooltiptext ttright">Next Video</div>fast_forward</button>
+                                    <button @click="showUniqueList(video.list)" class="material-icons listButton tooltip"><div class="tooltiptext ttright">Show Playlist</div>view_list</button>
                                 </div>
                             </div>
-                        </td>
-                    </tr>
-                </table>
-                <table class="videoList">
-                    <tr v-for="video in filteredVideos.slice(0, viewPort)" :key="video.id">
-                        <td>
-                            <div class="videoBox">
-                                <div class="videoChannelDiv">
-                                    <img :src="video.channelPicUrl" style="left:0;width:32px;height:32px;border-radius: 50%;vertical-align:middle;cursor:pointer;" @click="openChannel(video.channelName)" />
-                                    <span class="videoHeaderName" @click="openChannel(video.channelName)">{{video.channelTitle}}</span>
+                        </div>
+                    </div>
+                </div>
+                <div id="mainVideoList" class="videoList">
+                    <div class="videoBox" v-for="video in filteredVideos.slice(0, viewPort)" :key="video.id">
+                        <div class="videoChannelDiv">
+                            <img :src="video.channelPicUrl" style="left:0;width:32px;height:32px;border-radius: 50%;vertical-align:middle;cursor:pointer;" @click="openChannel(video.channelName)" />
+                            <span class="videoHeaderName" @click="openChannel(video.channelName)">{{video.channelTitle}}</span>
+                        </div>
+                        <div class="videoContentDiv">
+                            <div @click="openVideo(video.id)" @click.middle="openVideo(video.id)" class="videoThumb">
+                                <img :src="video.thumbnailUrl" style="width:246px;height:138px" />
+                                <p>{{video.duration}}</p>
+                            </div>
+                            <div class="videoTextContentDiv">
+                                <div class="videoTitleDiv">
+                                    <div class="videoTitleAndMetaDiv">
+                                        <div @click="openVideo(video.id)" @click.middle="openVideo(video.id)" class="videoTitle">
+                                            {{video.title}}
+                                        </div>
+                                        <div class="videoText">
+                                            <span class="videoTextChannel" @click="openChannel(video.channelName)">{{video.channelTitle}}</span> &#9679 {{video.publishedAtString}}
+                                        </div>
+                                    </div>
+                                    <div class="videoTitleButtons">
+                                        <button v-show="video.dlstatus == 0" class="material-icons videoTitleButton tooltip" @click="downloadVideo(video)"><div class="tooltiptext ttleft">Download Video</div>save_alt</button>
+                                        <button v-show="video.dlstatus == 1" v-bind:id="'video' + video.id" class="dlStatus1Button" style="cursor: default;">{{(video.dlprogress === "100") ? "Just a second..." : video.dlprogress + "% Finished"}}</button>
+                                        <button v-show="video.dlstatus == 2" class="dlStatus2Button" @click="window.location.replace('http://localhost:5000/localbrowser.html?id=' + video.id);">Available in Nightly</button>
+                                        <button class="material-icons videoTitleButton tooltip" @click="deleteVideo(video)"><div class="tooltiptext ttright">Move to Trashbin</div>clear</button>
+                                    </div>
                                 </div>
-                                <div class="videoContentDiv">
-                                    <div @click="openVideo(video.id)" @click.middle="openVideo(video.id)" class="videoThumb">
-                                        <img :src="video.thumbnailUrl" style="width:246px;height:138px" />
-                                        <p>{{video.duration}}</p>
-                                    </div>
-                                    <div class="videoTextContentDiv">
-                                        <div class="videoTitleDiv">
-                                            <div class="videoTitleAndMetaDiv">
-                                                <div @click="openVideo(video.id)" @click.middle="openVideo(video.id)" class="videoTitle">
-                                                    {{video.title}}
-                                                </div>
-                                                <div class="videoText">
-                                                    <span class="videoTextChannel" @click="openChannel(video.channelName)">{{video.channelTitle}}</span> &#9679 {{video.publishedAtString}}
-                                                </div>
-                                            </div>
-                                            <div class="videoTitleButtons">
-                                                <button v-show="video.dlstatus == 0" class="material-icons videoTitleButton tooltip" @click="downloadVideo(video)"><div class="tooltiptext ttleft">Download Video</div>save_alt</button>
-                                                <button v-show="video.dlstatus == 1" v-bind:id="'video' + video.id" class="dlStatus1Button" style="cursor: default;">{{(video.dlprogress === "100") ? "Just a second..." : video.dlprogress + "% Finished"}}</button>
-                                                <button v-show="video.dlstatus == 2" class="dlStatus2Button" @click="window.location.replace('http://localhost:5000/localbrowser.html?id=' + video.id);">Available in Nightly</button>
-                                                <button class="material-icons videoTitleButton tooltip" @click="deleteVideo(video)"><div class="tooltiptext ttright">Move to Trashbin</div>clear</button>
-                                            </div>
-                                        </div>
 
-                                        <div class="videoDesc">
-                                            <p>{{video.description}}</p>
-                                        </div>
-                                    </div>
+                                <div class="videoDesc">
+                                    <p>{{video.description}}</p>
                                 </div>
                             </div>
-                        </td>
-                    </tr>
-                </table>
+                        </div>
+                    </div>
+                </div>
                 <div class="bottomDiv">
                     <a target="_blank" rel="noopener noreferrer" href="https://github.com/MilchRatchet/SubBox" class="bottomDivEntry"><i class="bd-github"></i> Github</a>
                     <a href="http://localhost:5000/tutorial.html" class="bottomDivEntry"><i class="bd-html5"></i>Introduction</a>
