--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -280,6 +280,47 @@
             </div>
         </div>
 
+        <div id="tagsUI" v-show="tagsMode" class="tagsOverlay">
+            <div class="tagsList">
+                <div class="tagsListAdd">
+                    <div class="tagsListAddInput">
+                        <input @keyup.enter="submitTag" v-model="addTag" type="text" autocomplete="off" placeholder="Enter Tag..." list="channels" />
+                        <button @click="submitTag" class="material-icons">add</button>
+                    </div>
+                </div>
+                <div v-for="tag in tags" class="tagsListEntry">
+                    <div class="tagsListEntryContent">
+                        <div class="listSelectedMarker">
+                            <div style="height: 24px;" v-show="selectedTag != null && selectedTag.name == tag.name"></div>
+                        </div>
+                        <p @click="selectTag(tag)" class="tagsListEntryContentName">{{tag.name}}</p>
+                        <button @click.prevent="editTag(tag)" class="tagsListEntryContentEdit">
+                            Edit
+                        </button>
+                    </div>
+                    <div class="tagsListEntryEdit" v-if="tag.inEdit">
+                        <div class="tagsListEntryEditEntry" v-for="(tagFilter,index) in tag.filterList">
+                            <p class="tagsListEntryEditEntryName">{{tagFilter}}</p>
+                            <button class="tagsListEntryEditEntryButton">
+                                Remove
+                            </button>
+                        </div>
+                        <div class="tagsListEntryEditAdd">
+                            <div class="tagsListEntryEditAddInput">
+                                <input @keyup.enter="addFilterToTag(tag)" v-model="addTagFilter" type="text" autocomplete="off" placeholder="Enter Filter..." list="channels" />
+                                <button @click="saveFilters(tag)" class="material-icons">add</button>
+                            </div>
+                        </div>
+                        <div class="tagsListEntryEditRemove">
+                            <button @click="deleteTag(tag)" class="tagsListEntryEditRemoveButton">
+                                Remove Tag
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div id="trashbinUI" v-show="trashbinMode" class="trashbinOverlay">
             <div class="trashbinList">
                 <div v-for="video in oldVideos" :key="video.id" class="trashbinListEntry" @click.prevent="reactivateVideo(video)">
@@ -553,7 +594,7 @@
             <button @click="submitPlaylist" class="material-icons addPlaylistButton">add</button>
         </div>
 
-        <div id="tagsUI" v-show="tagsMode" class="overlay">
+        <div v-show="false" class="overlay">
             <div class="addTagDiv">
                 <input @keyup.enter="submitTag" class="addTagInput" v-model="addTag" type="text" autocomplete="off" placeholder="Enter Tag Name..." />
                 <button @click="submitTag" class="material-icons addTagButton">add</button>
