--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -273,7 +273,7 @@
 
         <div id="trashbinUI" v-show="trashbinMode" class="trashbinOverlay">
             <div class="trashbinList">
-                <div class="trashbinListSearch">
+                <div v-show="oldVideos.length > 0" class="trashbinListSearch">
                     <input v-model="trashbinFilter" type="text" autocomplete="off" placeholder="Search..." />
                 </div>
                 <div v-for="video in oldVideos.filter(v => (v.title + v.description + v.channelTitle).toUpperCase().includes(trashbinFilter.toUpperCase()))" :key="video.id" class="trashbinListEntry" @click.prevent="reactivateVideo(video)">
